k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: henriquepina/proj3-frontend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: logs-volume
              mountPath: /app/logs
            - name: nginx-temp
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-frontend-pvc
        - name: nginx-temp
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
