k8s/promtail-stack.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: default
  labels:
    app: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail-sa
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: containers
          hostPath:
            path: /var/log/containers
            type: Directory
        - name: pods
          hostPath:
            path: /var/log/pods
            type: Directory
        - name: positions
          emptyDir: {}
      containers:
        - name: promtail
          image: grafana/promtail:3.1.1
          args:
            - -config.file=/etc/promtail/config.yml
            - -log.level=debug
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: containers
              mountPath: /var/log/containers
              readOnly: true
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: positions
              mountPath: /tmp
