k8s/loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoramento
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.2
          ports:
            - containerPort: 3100
          args:
            - -config.file=/etc/loki/loki-config.yaml
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/
            - name: loki-storage
              mountPath: /data
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoramento
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
