k8s/loki-stack.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki
          args: ["-config.file=/etc/loki/local-config.yaml"]
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config-volume
              mountPath: /etc/loki/
      volumes:
        - name: loki-config-volume
          configMap:
            name: loki-config
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3100
      targetPort: 3100
    - name: grpc
      protocol: TCP
      port: 9096
      targetPort: 9096
  selector:
    app: loki
